--- a/public/css/style.css
+++ b/public/css/style.css
@@ -471,4 +471,10 @@ footer p {
         -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
     }
+    .articleList-item_text {
+        flex: 1;
+    }
+    .articleList-item_img {
+        flex: 4;
+    }
 }
