レスポンシブ修正

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,7 +383,7 @@ input[type="submit"] {
 }
 .addForm_title > textarea {
     box-sizing: border-box;
-    width: 500px;
+    width: 100%;
     display: block;
     border: 1px solid #c1baaf;
     color: #68653c;
@@ -443,7 +443,13 @@ footer p {
 /* ===========================
 メディアクエリ
 =========================== */
-@media screen and (max-width:450px) { 
+@media screen and (max-width:450px) {
+    .container_s {
+        padding: 20px;
+    }
+    .header {
+        margin-bottom: 10px;
+    }
     .header-item {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -452,6 +458,12 @@ footer p {
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center;
+    }
+    .top h1 {
+        font-size: 44px;
+    }
+    .top h1 span {
+        font-weight: normal;
     }
     .categoryList {
         -webkit-box-orient: vertical;
@@ -463,7 +475,7 @@ footer p {
         justify-content: center;
     }
     .categoryList-item {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
     .articleList-item {
         -webkit-box-orient: vertical;
@@ -476,5 +488,8 @@ footer p {
     }
     .articleList-item_img {
         flex: 4;
+    }
+    .article-imgWrap {
+        height: 180px;
     }
 }
